Fix bug form command display on IE9

--- a/content/assets/stylesheets/application.scss
+++ b/content/assets/stylesheets/application.scss
@@ -382,6 +382,7 @@ header.content {
       > img {
         display: block;
         float: left;
+        margin-bottom: 10px;
       }
 
       .info {
@@ -393,38 +394,43 @@ header.content {
         .name {
           font-size: 1.2em; 
           color: $red;
+          margin-left: 20px;
         } 
 
-        span {
+        .description {
           float: left;
           margin-left: 20px;
-          font-size:  0.7em;
+          font-size: 0.7em;
           word-wrap: break-word;
         }
       }
 
-      .price_container {
-        display: block;
+      .prices_container {
         float: right;
-        margin-left: 10px;
-        position: relative;
+        width: 150px;
 
-        span {
-          display: block;
-          width: 100%;
-          font-size: 0.7em;
-          line-height: 15px;
-        } 
+        .price_content {
+          margin-left: 10px;
+          position: relative;
+          float: left;
 
-        .price {
-          color: $red;
+          span {
+            display: block;
+            width: 100%;
+            font-size: 0.7em;
+            line-height: 15px;
+          } 
+
+          .price {
+            color: $red;
+          }
+
+          .field {
+            width: 60px;
+          }
+
+          @include disable-box('min_disable.png');
         }
-
-        .field {
-          width: 60px;
-        }
-
-        @include disable-box('min_disable.png');
       }
     }
 
